Subir lista com as ablidades

--- a/index.html
+++ b/index.html
@@ -116,13 +116,15 @@
           <img src="img/html-css.png" class="card-img-top w-50" alt="...">
           <div class="card-body">
             <h5 class="card-title">HTML 5 CSS</h5>
-            <p class="card-text"><ul class="list-group">
-              <li class="list-group-item">An item</li>
-              <li class="list-group-item">A second item</li>
-              <li class="list-group-item">A third item</li>
-              <li class="list-group-item">A fourth item</li>
-              <li class="list-group-item">And a fifth one</li>
-            </ul></p>
+            <p class="card-text">
+              <ul class="list-group">
+                <li class="list-group-item">HTML5 Semântico e acessibilidade</li>
+                <li class="list-group-item">Layouts responsivos com Flexbox e Grid</li>
+                <li class="list-group-item">Design mobile-first</li>
+                <li class="list-group-item">Boas práticas de SEO</li>
+                <li class="list-group-item">Animações e transições CSS</li>
+              </ul>
+            </p>
           </div>
         </div>
       </div>
@@ -133,11 +135,11 @@
             <h5 class="card-title">JAVASCRIPT</h5>
             <p class="card-text">
               <ul class="list-group">
-                <li class="list-group-item">An item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A fourth item</li>
-                <li class="list-group-item">And a fifth one</li>
+                <li class="list-group-item">Manipulação do DOM</li>
+                <li class="list-group-item">ES6+ (arrow functions, async/await, promises)</li>
+                <li class="list-group-item">API Fetch e AJAX para requisições assíncronas</li>
+                <li class="list-group-item">Controle de eventos</li>
+                <li class="list-group-item">Integração com APIs externas</li>
               </ul>
             </p>
           </div>
@@ -150,11 +152,11 @@
             <h5 class="card-title">REACT</h5>
             <p class="card-text">
               <ul class="list-group">
-                <li class="list-group-item">An item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A fourth item</li>
-                <li class="list-group-item">And a fifth one</li>
+                <li class="list-group-item">Componentização e reutilização de código</li>
+                <li class="list-group-item">Gerenciamento de estado com Hooks (useState, useEffect)</li>
+                <li class="list-group-item">React Router para navegação de páginas</li>
+                <li class="list-group-item">Context API e Redux para gerenciamento global de estado</li>
+                <li class="list-group-item">Desenvolvimento com JSX e Virtual DOM</li>
               </ul>
             </p>
           </div>
@@ -167,11 +169,11 @@
             <h5 class="card-title text-uppercase">Python</h5>
             <p class="card-text">
               <ul class="list-group">
-                <li class="list-group-item">An item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A fourth item</li>
-                <li class="list-group-item">And a fifth one</li>
+                <li class="list-group-item">Automação de tarefas e scripts</li>
+                <li class="list-group-item">Manipulação de dados com Pandas e NumPy</li>
+                <li class="list-group-item">Desenvolvimento web com Django/Flask</li>
+                <li class="list-group-item">Criação de APIs RESTful</li>
+                <li class="list-group-item">Testes automatizados com unittest/pytest</li>
               </ul>
             </p>
           </div>
